enum-response-derive/tests/ui/derive-struct.rs
#[macro_use]
extern crate enum_response_derive;

#[derive(EnumResponse)]
struct Test;

